--- a/styles/general.css
+++ b/styles/general.css
@@ -1,5 +1,8 @@
-* {
+*, *::before, *::after {
     box-sizing: border-box;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
 }
 
 .page-container {
@@ -13,12 +16,36 @@
 .grid {
     display: flex;
     justify-content: center;
-    border-collapse: collapse;
-    width: 20rem;
-    height: 5%;
-    margin: 0 auto;
-    margin-bottom: 1em;
+    align-items: center;
+    width: 50vw;
+    height: 50vw;
 }
 
-.grid 
+.box-container {
+    border-collapse: collapse;
+    width: 50%;
+    height: 50%;
+    table-layout: fixed;
+}
+
+.box {
+    border: 1px solid black;
+    text-align: center;
+}
+
+table tr:first-child td {
+    border-top: 0;
+}
+
+table tr:last-child td {
+    border-bottom: 0;
+}
+
+table tr td:first-child {
+    border-left: 0;
+}
+
+table tr td:last-child {
+    border-right: 0;
+}
 
